refactor: finished account module
